fix: head alignment issues

--- a/ui/src/css/calendar-month.sass
+++ b/ui/src/css/calendar-month.sass
@@ -51,7 +51,7 @@
       display: flex
       flex-wrap: nowrap
       user-select: none
-      padding: 0
+      padding: 2px
       font-size: 1rem
       width: 100%
       min-width: 25px
