--- a/ui/src/css/calendar-scheduler.sass
+++ b/ui/src/css/calendar-scheduler.sass
@@ -87,6 +87,7 @@
   &__head--weekday,
   &__head--date
     margin: 2px
+    flex: 1 0 0
 
   &__head--day__label
     user-select: none
