--- a/ui/src/css/q-calendar.sass
+++ b/ui/src/css/q-calendar.sass
@@ -58,6 +58,7 @@
 
   &__header--inline
     display: flex
+    flex: 1 0 0
     flex-direction: row
     flex-wrap: nowrap
     justify-content: space-between
